# thoth

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
analysis/classes_tests_2025/: test_query_engines.ipynb
analysis/classes_tests_2025/sql/: test.sql
analysis/feature_store_2025/: README.md  pyproject.toml
analysis/instore_prices_synthetic_control_method_2025/: instore_price_synthetic_control_method.ipynb  pyproject.toml  template_gettingstarted.ipynb
analysis/navigation_tab_bar_2025/: README.md  navigation_tab_bar.ipynb
analysis/navigation_tab_bar_2025/sql/: assumption_co_ni.sql  bottom_reached.sql  clicks_session.sql  co_distribution.sql  navigation_tab_bar.sql
prompts/: TEMPLATE_PROMPT.md
src/: dataframe_pivot.py  dataframe_synthetic_control_preparation.py
src/analysis/PNA_real_time_bot_availability_override_2025/: PNA_real_time_bot_availability_override.ipynb  pyproject.toml
src/analysis/PNA_real_time_bot_availability_override_2025/sql/: test_bq_exposures.sql  test_starburst_exposures.sql
src/analysis/classes_tests_2025/: test_dataframe_visualizer.ipynb
src/analysis/classes_tests_2025/sql/: test_dataframe_visualizer.sql
src/analysis/feature_store_2025/: top_brands_feature_stores.ipynb
src/analysis/instore_prices_synthetic_control_method_2025/: instore_price_synthetic_control_method.ipynb
src/analysis/instore_prices_synthetic_control_method_2025/sql/: time_series.sql
src/analysis/navigation_tab_bar_2025/sql/: ctr.sql
src/tests/dataframe_visualizer_test_2025/: pyproject.toml  test_dataframe_visualizer.ipynb
src/tests/query_engines_test_2025/: pyproject.toml  test_query_engines.ipynb  test_query_engines_bigquery.ipynb  test_query_engines_starburst.ipynb
src/tests/query_engines_test_2025/sql/: test.sql  test_bigquery.sql
src/tools/casillero/: config.yaml  questionaire.py
src/tools/casillero_2025/: casillero.json  config.yaml  pyproject.toml  questionaire.py  timer.py
src/tools/feature_store_2025/: pyproject.toml  top_brands_feature_stores.ipynb
src/tools/query_engines_test_2025/: pyproject.toml
src/tools/query_playground_2025/: 000.ipynb  pyproject.toml  template_creator.py
src/tools/query_playground_2025/sql/: test.sql
src/tools/query_playground_2025/templates/: template.ipynb
src/tools/questionaire_2025/: config.yaml  pyproject.toml  questionaire.py
src/tutorials/cluster_experiments_2025/: power_analysis.ipynb  pyproject.toml
src/utils/: dataframe_tools.py  query_engines.py
src/ utils/: dataframe_pivot.py  dataframe_visualizer.py  query_engines.py
templates/: bought_products.sql  calendar_dates.sql  common_sql.sql  custom_event.sql  dataframe_pivot.py  dataframe_visualizer.py  order_descriptors.sql  query_engines.py  store_addresses_v2.sql  store_entity_tags.sql  stores_v2.sql  template_dataframe_tools.py  template_query_engines.py  template_sql.sql
venvs/thoth3_13/: pyproject.toml
