[tool.poetry]
name = "thoth"
version = "0.1.0"
description = ""
authors = ["JordiCremades4444 <jordicremadesrosell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
pre-commit = "^4.1.0"
pandas = "^2.2.3"
setuptools = "^75.8.0"
mysql = "^0.0.3"
mysql-connector-python = "^9.2.0"
trino = "^0.333.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.10.0"
causalimpact = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
