[tool.poetry]
name = "thoth3-13"
version = "0.1.0"
description = ""
authors = ["JordiCremades4444 <jordicremadesrosell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = "^2.2.2"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
